syntax = "proto3";

option csharp_namespace = "mqttdevice";
import "google/protobuf/timestamp.proto";

message Telemetry {
	double temperature = 1; 
	double workingSet = 2;
}

message Properties {
	string sdkInfo = 1;
	int32 interval = 2;
	google.protobuf.Timestamp started = 3;
}

service Command_echo {
	rpc echo(echoRequest) returns (echoResponse) {}
}

message echoRequest {
	string inEcho = 1;
}

message echoResponse {
	string outEcho = 1;
}